configuring environments and describing README.md